tests/golden/type_errors/named_struct_unknown_field_access.cd
struct Person { name: string, age: number }
let p: Person = Person { name: "Ada", age: 36 };
print p.title;
