tests/golden/type_errors/named_struct_unknown_field_access.err
Type error at 3:9: struct `Person` has no field `title`
  print p.title;
          ^
